--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://mbAndrew.github.io/national-parks",
+  "homepage": "http://mbsAndrew.github.io/national-parks/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
