--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.2.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
